ProjectoPracticoISI/force-app/main/default/objects/Game__c/fields/Plataforma__c.field-meta.xml
<CustomField>
    <fullName>Plataforma__c</fullName>
    <label>Plataforma</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EPIC</fullName>
            </value>
            <value>
                <fullName>GOG</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>STEAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>