ProjectoPracticoISI/force-app/main/default/objects/Game__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <description>campo de tipo divisa</description>
    <inlineHelpText>campo de tipo divisa :D</inlineHelpText>
    <label>Precio</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>